# simple-raytracer

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.sh  camera.h  dielectric.h  hittable.h  hittable_list.h  lambertian.h  main.cpp  material.h  metal.h  ray.h  run.sh  sphere.h  util.h  vec3.h
cpp/: CMakeLists.txt  build.sh  run.sh
cpp/src/: main.cpp
cpp/src/base/: CMakeLists.txt  hit_record.h  hittable_list.cpp  hittable_list.h  ray.cpp  vec3.h
cpp/src/benchmarks/: CMakeLists.txt
cpp/src/materials/: dielectric.h
cpp/src/objects/: CMakeLists.txt  camera.cpp  camera.h  sphere.h
cpp/src/util/: CMakeLists.txt  profiler.h  util.cpp  util.h
rust/: .gitignore  Cargo.toml  run.sh
rust/src/: camera.rs  dielectric.rs  hittable.rs  lambertian.rs  main.rs  material.rs  ppm_image.rs  ray.rs  renderer.rs  sphere.rs  utils.rs  vec3.rs
src/: CMakeLists.txt  camera.h  camera.rs  dielectric.h  dielectric.rs  elapsed_timer.h  hittable.h  lambertian.rs  main.cpp  main.rs  material.h  material.rs  metal.h  metal.rs  moving_sphere.rs  profiler.h  ray.h  ray.rs  renderer.rs  util.h  utils.rs  vec3.h  vec3.rs
src/base/: CMakeLists.txt  camera.h  hittable.h  hittable_list.cpp  hittable_list.h  ppm_image.h  ray.cpp  ray.h  sphere.h  vec3.cpp  vec3.h
src/benchmarks/: CMakeLists.txt  benchmarks.cpp  bm-glass-spheres.cpp
src/camera/: CMakeLists.txt
src/geometry/: CMakeLists.txt
src/materials/: CMakeLists.txt  dielectric.h  lambertian.h  material.h  metal.h
src/objects/: CMakeLists.txt  camera.cpp  camera.h  sphere.h
src/shapes/: CMakeLists.txt  hittable_list.h
src/util/: CMakeLists.txt  profiler.cpp  util.cpp  util.h
