add_compile_options(
  -Werror
  -Wall
  -Wextra
  -pedantic
  -Wcast-align
  -Wcast-qual
  -Wctor-dtor-privacy
  -Wdisabled-optimization
  -Wformat=2
  -Winit-self
  -Wlogical-op
  -Wmissing-include-dirs
  -Wnoexcept
  -Wold-style-cast
  -Woverloaded-virtual
  -Wredundant-decls
  -Wshadow
  -Wsign-promo
  -Wstrict-null-sentinel
  -Wundef
  -Wno-unused
  -Wno-variadic-macros
  -Wno-parentheses
  -fdiagnostics-show-option)

add_executable(
  ${PROJECT_NAME}
  main.cpp
  vec3.h
  util.h
  sphere.h
  ray.h
  metal.h
  material.h
  lambertian.h
  hittable.h
  hittable_list.h
  dielectric.h
  camera.h)

set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY
                                                 "${CMAKE_BINARY_DIR}")
